# bookmark-hub

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bootstrap.hurl  docker-compose.gemini-test.yml  docker-compose.host-ollama.yml  docker-compose.yml  flake.nix  justfile  shell.nix  test.hurl
.github/workflows/: ci.yaml  ghcr-publish.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20220924213259_bookmark.sql
backend/schema/: 1_init.sql
backend/src/: auth.rs  error.rs  lib.rs  main.rs  ollama.rs  s3.rs
backend/src/daemon/: mod.rs  processor.rs  runner.rs
backend/src/db/: bookmark.rs  mod.rs  search.rs  task.rs  user.rs
backend/src/endpoints/: auth.rs  bookmark.rs  mod.rs  search.rs
backend/src/text/: tokenizer.rs
cli/: Cargo.toml
cli/src/: main.rs
daemon/: .gitignore  Cargo.toml  Dockerfile  README.md
daemon/src/: lib.rs  main.rs  processor.rs  runner.rs
public-api/: .gitignore  Cargo.toml  Dockerfile  README.md
public-api/migrations/: 20220724151328_user.sql  20220924213259_bookmark.sql
public-api/src/: auth.rs  lib.rs  main.rs  readability.rs
public-api/src/daemon/: mod.rs  processor.rs  runner.rs
public-api/src/database/: bookmark.rs  mod.rs  search.rs  task.rs  user.rs
public-api/src/endpoints/: auth.rs  bookmark.rs  search.rs
readability-api/: Dockerfile  README.md  main.ts
server/: Cargo.toml
server/schema/: 1_init.sql  1_unified.sql  2_embedding_dimension.sql  3_lowercase_tags.sql  4_trim_tags.sql  5_reembed_qwen3.sql  6_ai_generation_retry_state.sql  7_bookmark_identity.sql  8_flexible_embeddings.sql  9_unified_ai_pipeline.sql
server/src/: auth_rate_limit.rs  bookmark_identity.rs  chrome_client.rs  error.rs  lib.rs  main.rs  ollama.rs  rag.rs  readability.rs  tokenizer.rs
server/src/daemon/: add_bookmark.rs  embeddings.rs  mod.rs  processor.rs  runner.rs  summary.rs  tag.rs  text_ai.rs
server/src/db/: ai.rs  bookmark.rs  bookmark_task.rs  chunks.rs  mod.rs  rag.rs  search.rs  user.rs
server/src/endpoints/: auth.rs  bookmark.rs  bookmark_task.rs  mod.rs  rag.rs  search.rs  static_content.rs
server/src/llm/: mod.rs  operations.rs  provider.rs
server/src/mcp/: mod.rs  server.rs  tools.rs
server/tests/: integration_db.rs  integration_db_bookmark.rs  integration_db_bookmark_task.rs  integration_db_rag.rs  integration_db_search.rs  integration_db_user.rs
server/tests/common/: mod.rs  test_db.rs
shared/: Cargo.toml
shared/src/: lib.rs
spa/: Cargo.toml  index.html
spa/src/: app.rs  main.rs  router.rs  user_session.rs
spa/src/api/: auth_api.rs  bookmark_tasks_api.rs  bookmarks_api.rs  mod.rs  rag_api.rs  search_api.rs  tags_api.rs
spa/src/components/atoms/: input_checkbox.rs  input_datetime_utc.rs  input_text.rs  markdown_render.rs  mod.rs  safe_html.rs  select.rs
spa/src/components/composite/: add_bookmark_modal.rs  bookmark_reader.rs  login_form.rs  main_search_result.rs  mod.rs  navigation_bar.rs  pagination_controls.rs  rag_history.rs  rag_query.rs  search_bar.rs  tags_filter.rs  tasks_filter.rs  tasks_table.rs
spa/src/pages/: home.rs  mod.rs  rag.rs  rag_history.rs
web-spa/: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
web-spa/src/: app.rs  lib.rs  main.rs  router.rs  user_session.rs
web-spa/src/api/: auth_api.rs  bookmarks_api.rs  mod.rs  search_api.rs  tags_api.rs
web-spa/src/components/: mod.rs
web-spa/src/components/atoms/: input_checkbox.rs  input_switch.rs  input_text.rs
web-spa/src/components/composite/: add_bookmark_modal.rs  aside_tags.rs  bookmark_reader.rs  login_form.rs  main_search_result.rs  mod.rs  navigation_bar.rs  search_bar.rs  tags_filter.rs
web-spa/src/pages/: bookmark.rs  home.rs  login.rs  mod.rs  not_found.rs
web-spa/static/css/: styles.css
