[workspace]
members = ["server", "spa", "shared", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "bookmark-hub"

[workspace.dependencies]
anyhow = "1"
base64-url = "3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
thiserror = "1"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4", "js"] }
secrecy = { version = "0.10", features = ["serde"] }
