[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = "line-tables-only"
strip = false

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
axum-otel-metrics = "0.8"
base64-url = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9.3"
lol_html = "1.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
murmur3 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "json",
] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
