[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64-url = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
home = "0.5"
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared/" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }
scraper = "0.25"
