[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0"
base64-url = "1.4"
chrono = { version = "0.4", features = ["serde"] }
lol_html = "0.3"
murmur3 = "0.5"
url = { version = "2.3", features = ["serde"] }
uuid = {version = "1.1", features = ["v4", "serde"]}

reqwest = {version = "0.11", features = ["json"] }

tokio = { version = "1", features =["full"] }
futures = "0.3"

sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }

aws-config = "0.52"
aws-sdk-s3 = "0.22"
tracing-loki = "0.2"
strum = "0.24"
strum_macros = "0.24"
