[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-s3 = "1.40"
base64-url = "3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lol_html = "1.2"
murmur3 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "json",
] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
