[package]
name = "public-api"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"
thiserror = "1.0"

uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features =["full"] }

axum = {version ="0.5", features = ["headers"]}
headers = "0.3"
axum-macros = "0.2"
tower = "0.4"
tower-http = { version = "0.2", features = ["trace", "cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }

jsonwebtoken = "8.1"
hmac = "0.11"
sha2 = "0.9"
argon2 = "0.3"

strum = "0.24"
strum_macros = "0.24"
secrecy = { version = "0.8", features = ["serde"] }
tracing-loki = "0.2"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
