[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
axum-otel-metrics = "0.8"
base64-url = "3"
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
deadpool-postgres = "0.14.0"
futures = "0.3"
hex = { workspace = true }
hmac = "0.12"
jsonwebtoken = "9.3"
lol_html = "1.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
murmur3 = "0.5"
postgres-from-row = "0.5.2"
postgres-types = { version = "0.2.7", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared/" }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = [
  "array-impls",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }
