[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum-otel-metrics = "0.10"
base64-url = { workspace = true }
cantrip = "0.4.0"
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
deadpool-postgres = "0.14"
dom_smoothie = "0.11.0"
futures = "0.3"
hex = { workspace = true }
hmac = "0.12"
jsonwebtoken = "9.3"
lol_html = "2.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
murmur3 = "0.5"
ollama-rs = { version = "0.3.2", features = ["macros"] }
opentelemetry_sdk = "0.28.0"
postgres-from-row = "0.5.2"
postgres-types = { version = "0.2.9", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
schemars = "1.0.4"
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared/" }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokenizers = { version = "0.21.0", features = ["http"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
  "array-impls",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { version = "0.24" }

[features]
integration-tests = []
