[package]
name = "spa"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.6"
log = "0.4"
pulldown-cmark = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared/" }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = "1"
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = "0.2.100"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
