[package]
name = "spa"
version.workspace = true
edition.workspace = true

[dependencies]
ammonia = "4"
anyhow = { workspace = true }
chrono = { workspace = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-net = "0.7"
log = "0.4"
pulldown-cmark = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared/" }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = "0.2.126"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["EventTarget", "History", "HtmlInputElement", "Location", "MouseEvent", "PopStateEvent", "UrlSearchParams", "Window"] }
yew = { version = "0.23", features = ["csr"] }
yew-hooks = "0.6"
