[package]
name = "web-spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.24"
strum_macros = "0.24"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { version = "0.20", features = ["csr"]}
yew-router = "0.17"
yewdux = "0.9"

